# elephant

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  .zenodo.json  AUTHORS.txt  CITATION.cff  CITATION.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  codemeta.json  io.py  multitaper_todo.txt  plotting.py  postBuild  pyproject.toml  readthedocs.yml  requirements-docs.txt  requirements-extras.txt  requirements-pandas.txt  requirements-tests.txt  requirements-tutorials.txt  requirements.txt  setup.py  setup_adapted.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-help-support.md
.github/workflows/: CI.yml  build_wheels.yml  cache_elephant_data.yml  ci.yml  ebrains.yml  ruff-formatting.yml
continuous_integration/: install.sh  install_conda.sh  install_pip.sh  test_script.sh
doc/: Makefile  acknowledgments.rst  api_reference.rst  authors.rst  citation.rst  conf.py  contribute.rst  developers_guide.rst  documentation_guide.rst  environment.yml  get_in_touch.rst  index.rst  install.rst  maintainers_guide.rst  maintaners_guide.rst  make.bat  modules.rst  overview.rst  release_notes.rst  requirements.txt  rescan_module_tree  style_guide.rst  tutorial.rst  tutorials.rst
doc/_static/: custom.css  my-styles.css
doc/bib/: elephant.bib
doc/ipynb/: statistics.ipynb
doc/reference/: _spike_train_patterns.rst  _spike_train_processing.rst  asset.rst  causality-overview.rst  causality.rst  cell_assembly_detection.rst  change_point_detection.rst  conversion.rst  cubic.rst  current_source_density.rst  datasets.rst  functional_connectivity_estimation.rst  gpfa.rst  kernels.rst  neo_tools.rst  pandas_bridge.rst  parallel.rst  phase_analysis.rst  signal_processing.rst  spade.rst  spectral.rst  spike_train_correlation.rst  spike_train_dissimilarity.rst  spike_train_generation.rst  spike_train_processing.rst  spike_train_surrogates.rst  spike_train_synchrony.rst  sta.rst  statistics-overview.rst  statistics.rst  trials.rst  unitary_event_analysis-overview.rst  unitary_event_analysis.rst  utils.rst  waveform_features.rst
doc/tutorials/: asset.ipynb  gpfa.ipynb  gpfa_trials.ipynb  granger_causality.ipynb  parallel.ipynb  signal_processing.ipynb  spade.ipynb  spike_power_spectra.ipynb  statistics.ipynb  trials.ipynb  unitary_event_analysis.ipynb
elephant/: VERSION  __init__.py  _cython_utils.c  _cython_utils.pyx  asset.py  cell_assembly_detection.py  change_point_detection.py  conversion.py  corr_coef_min_bsp.py  csd.py  cubic.py  current_source_density.py  data_utils.py  datasets.py  functional_connectivity.py  gpfa.py  joint_isi_dithering.py  joint_isi_dithering_class.py  kernel.py  kernels.py  multiple_filter_test.py  multitaper_spectral.py  multitaper_utils.py  neo_tools.py  neoinfo.py  neural_trajectory.py  online.py  pandas_bridge.py  parallel.py  phase_analysis.py  signal.py  signal_proc.py  signal_processing.py  spade.py  spade_vw.py  spectral.py  spike_contrast.py  spike_train_correlation.py  spike_train_dissimilarity.py  spike_train_generation.py  (+12 more)
elephant/asset/: __init__.py  asset.py  asset.pycuda.cu  asset.pyopencl.cl  asset.template.cu  joint_pmat.cu  joint_pmat_old.cu  pmat_neighbors.cl  pmat_neighbors.cu
elephant/buffalo/: __init__.py  _no_provenance.py  ast.py  ast_analysis.py  base.py  code_lines.py  decorator.py  exceptions.py  graph.py  graphics.py  helpers.py  histogram.py  ipython.py  object_hash.py  prov.py  provenance.py  serialization.py  static_code.py  statistics.py  testing.py  types.py
elephant/causality/: granger.py
elephant/csd/: KCSD.py  __init__.py  basis_functions.py  icsd.py  utility_functions.py
elephant/csd_methods/: demo_icsd.py  icsd.py
elephant/current_source_density/: CSD.py  KCSD.py  KCSD1D.py  KCSD2D.py  KCSD2D_Helpers.py  KCSD3D.py  MoIKCSD.py  __init__.py  basis_functions.py  utility_functions.py
elephant/current_source_density_src/: KCSD.py  README.md  __init__.py  basis_functions.py  icsd.py  test_data.mat  utility_functions.py
elephant/functional_connectivity_src/: total_spiking_probability_edges.py
elephant/gpfa/: __init__.py  core.py  gpfa.py  gpfa_core.py  gpfa_util.py  neural_trajectory.py  plotting.py  util.py
elephant/gpfa_src/: INFO.md  README.md  gpfa_core.py  gpfa_util.py
elephant/icsd/: README.md  demo_icsd.py  icsd.py
elephant/joint_decorrelation/: __init__.py  joint_decorrelation.py
elephant/neural_trajectory_src/: README.md  core.py  gpfa.py  gpfa_util.py  util.py
elephant/parallel/: __init__.py  experimental.py  mpi.py  parallel.py  tests.py
elephant/schemas/: field_serializer.py  field_validator.py  function_validator.py  schema_spike_train_correlation.py  schema_spike_train_synchrony.py  schema_statistics.py
elephant/spade_src/: LICENSE  __init__.py  fast_fca.py  fim_manager.py
elephant/test/: __init__.py  concurrent_test_runner_for_uea.py  download.py  generate_datasets.py  make_spike_extraction_test_data.py  spike_extraction_test_data.npz  spike_extraction_test_data.txt  test_asset.py  test_buffalo.py  test_buffalo_helpers.py  test_buffalo_statistics.py  test_causality.py  test_cell_assembly_detection.py  test_change_point_detection.py  test_conversion.py  test_csd.py  test_cubic.py  test_current_source_density.py  test_datasets.py  test_gpfa.py  test_icsd.py  test_joint_decorrelation.py  test_joint_isi_dithering.py  test_joint_isi_dithering_class.py  test_kcsd.py  test_kernels.py  test_mft.py  test_multitaper.py  test_multitaper_utils.py  test_neo_tools.py  test_neoinfo.py  test_neural_trajectory.py  test_online.py  test_pandas_bridge.py  test_parallel.py  test_phase_analysis.py  test_schemas.py  test_signal.py  test_signal_proc.py  test_signal_processing.py  (+19 more)
elephant/testutils/: download.py
examples/: gpfa_example.py
requirements/: environment-docs.yml  environment-tests.yml  environment.yml  requirements-cuda.txt  requirements-docs.txt  requirements-extras.txt  requirements-opencl.txt  requirements-prov.txt  requirements-tests.txt  requirements-tutorials.txt  requirements.txt
signals/: analogs.py
tools/: fim_manager.py
(+72 files in other folders)
