[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elephant"
dynamic = ["version"]
description = "Elephant (Electrophysiology Analysis Toolkit) is an open-source, community centered library for the analysis of electrophysiological data in the Python programming language. The focus of Elephant is on generic analysis functions for spike train data and time series recordings from electrodes, such as the local field potentials (LFP) or intracellular voltages.In addition to providing a common platform for analysis code from different laboratories, the Elephant project aims to provide a consistent and homogeneous analysis framework that is built on a modular foundation. Elephant is the direct successor to Neurotools and maintains ties to complementary projects such as OpenElectrophy and spykeviewer."
license = "BSD-3-Clause"
license-files = [ "LICENSE.txt"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Natural Language :: English", "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering"]
keywords = ["neuroscience", "neurophysiology", "electrophysiology", "statistics", "data-analysis"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"

dependencies = [
    "neo>=0.10.0",
    "numpy>=2.0.0",
    "quantities>=0.14.1",
    "scipy>=1.10.0",
    "six>=1.10.0",
    "tqdm",
]

[project.optional-dependencies]
cuda = [
    "pycuda>=2020.1", # used in ASSET
]

docs = [
    "numpydoc>=1.1.0",
    "jupyter>=1.0.0",
    "sphinx>=3.3.0",
    "nbsphinx>=0.8.0",
    "sphinxcontrib-bibtex>1.0.0",
    "sphinx-tabs>=1.3.0",
    "matplotlib>=3.3.2,<3.9.0",
    "docutils<0.22",
]

extras = [
    "scikit-learn>=0.23.2",
    "statsmodels>=0.12.1",
    "jinja2>=2.11.2",
]

opencl = [
    "pyopencl>=2020.2.2",
]

tests = [
    "pytest",
    "nixio>=1.5.0",
]

tutorials = [
    "matplotlib>=3.3.2,<3.9.0",
    "h5py>=3.1.0",
    "nixio>=1.5.0",
]

[tool.setuptools.dynamic]
version = {file = "elephant/VERSION"}

# Include source files; uses a flat layout
[tool.setuptools.packages.find]
where = ["."]
include = ["elephant*"]

# Include package data as per MANIFEST.in
[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = "http://python-elephant.org"
Documentation = "https://elephant.readthedocs.io/en/latest/"
Repository = "https://github.com/NeuralEnsemble/elephant"
Issues = "https://github.com/NeuralEnsemble/elephant/issues"
Changelog = "https://github.com/NeuralEnsemble/elephant/releases"

# This file was created following this guide:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#writing-pyproject-toml
